Проект ShareIt. Техническое задание. Часть 1 (Выполнено)